fixed text alignment on contact

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
   }
 
   p, span, a, li {
-    @apply font-light opacity-80 text-center md:text-left;
+    @apply font-light opacity-80  md:text-left;
   }
   
   .section-heading h2, .section-heading p {
